@@ -1,7 +1,11 @@
-﻿[B]Version 2.3.1[/B]
+﻿[B]Version 2.3.2[/B]
+[+] Control Center: Исправлена работа без серчеров
+
+[B]Version 2.3.1[/B]
 [+] Загрузка: Исправлена ошибка удаления базы данных
 [+] Списки Медиа: Исправлен IMDB TOP 250
-[+] Проигрыватель: Добавлена поддержка Android ARM
+[+] Проигрыватель: [B]Добавлена полная поддержка Android (arm)[/B]
+[+] Поиск: Все серчеры вынесены из плагина
 
 [B]Version 2.3.0[/B]
 [+] Поиск: Поиск существенно ускорился, стал многопоточным (пока 3 потока одновременно)
